forth/test/fail/test_declaration_ident.af
\ Must fail to compile.
fun: bad_name end
